# messenger_api

./: .env.example  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt
src/application/: app.py
src/application/controlllers/: __init__.py  auth.py  file.py  message.py  updates.py  user.py
src/domain/dto/auth/: __init__.py  change_password.py  login.py  register.py  restore_password.py
src/domain/dto/message/: __init__.py  chat_out.py  create.py  message_out.py
src/domain/dto/user/: __init__.py  user_out.py
src/domain/extension/email/: __init__.py  email_message.py  restore_password.py
src/domain/helpers/email/: email_sender.py  jinja_email.py  restore_password.py
src/domain/helpers/hash/: __init__.py  generate_token.py  hash_pw.py
src/domain/services/: auth.py  file.py  message.py  user.py
src/infrastructure/config/: __init__.py  app_environment.py
src/infrastructure/config/models/: __init__.py  app.py  database.py  mail.py  minio.py  redis.py
src/infrastructure/config/templates/: __init__.py  restore_passsword.py
src/infrastructure/database/: __init__.py  database.py
src/infrastructure/database/models/: __init__.py  chat.py  message.py  user.py
src/infrastructure/database/table_model/: __init__.py  table_model.py
src/infrastructure/errors/auth/: __init__.py  not_found.py  (+3 more)
src/infrastructure/helpers/: __init__.py  fastapi.py  lifespan.py  password.py
src/infrastructure/minio/: __init__.py  bucket.py  client.py  file.py
src/infrastructure/redis/: __init__.py
src/infrastructure/repository/: __init__.py
(+29 files in other folders)
